syntax = "proto3";
option go_package = "github.com/getAlby/lndhub.go/lndhubrpc";

import "google/protobuf/timestamp.proto";
package lndhubrpc;

// The greeting service definition.
service InvoiceSubscription {
  rpc SubsribeInvoices (SubsribeInvoicesRequest) returns (stream Invoice) {}
}
message SubsribeInvoicesRequest {}
message Invoice {

    message CustomRecords {
        string key = 1;
        string value = 2;
    }

    uint32 id = 1;
    string type = 2;
    uint32 user_id = 3;
    uint32 amount = 4;
    uint32 fee = 5;
    string memo = 6;
    string description_hash = 7;
    string payment_request = 8;
    string destination_pubkey_hex = 9;
    repeated CustomRecords custom_records = 10;
    string r_hash = 11;
    string preimage = 12;
    bool keysend = 13;
    string state = 14;
    google.protobuf.Timestamp created_at = 15;
    google.protobuf.Timestamp expires_at = 16;
    google.protobuf.Timestamp updated_at = 17;
    google.protobuf.Timestamp settled_at = 18;
}